# data_structures

./: .clang-format  .gitignore  Basic data structures in C.md  Basic_data_structures_in_C.md  CMakeLists.txt  Data_structures_in_C.ipynb  Makefile  README.md  conanfile.txt  meson.build
content/: Linked list in Go.md
content/dot/: linked01.dot  linked02.dot  linked03.dot  linked04.dot  linked05.dot  linked06.dot  linked07.dot  linked08.dot  linked09.dot  linked10.dot  linked11.dot  linked12.dot  linked14.dot  linked15.dot  linked16.dot
dictionaries/: CMakeLists.txt
dot/: linked01.dot
include/: ds.h
src/: linkedlist.c  meson.build  stuff.c  stuff_test.cpp
tests/: meson.build  test_linkedlist.c
trees/: CMakeLists.txt  bst.hpp  btree_tests.cpp
